[package]
name = "virtual_currency_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.28.0", features = ["native-tls"]}
futures-util = "0.3"
serde_json = "1"
serde = {version = "1.0.228", features = ["derive"]}
url = "2"
toml = "0.9.8"
anyhow = "1.0.100"
crossterm = "0.29.0"